# pySpaceTraders

./: .editorconfig  .gitignore  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  milestone.yml  security_vulnerability.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
pySpaceTraders/: __init__.py  api.py  api_client.py  client.py  constants.py  enums.py  utils.py
pySpaceTraders/models/: agent.py  agents.py  cargo.py  constructionsites.py  contract.py  contracts.py  enums.py  errors.py  factions.py  general.py  jumpgates.py  markets.py  models.py  responses.py  ships.py  shipyards.py  status.py  systems.py  waypoints.py
pySpaceTraders/models/response/: __init__.py  agents.py  contracts.py  factions.py  fleet.py  general.py  generic.py  systems.py
pySpaceTraders/utils/: api_request.py  parsers.py  pySpaceLimiter.py  pySpaceLogger.py  pySpaceParsers.py  pySpaceRequest.py
tests/: test.py
