[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pySpaceTrader"
version = "0.5.0"
authors = [
    { name = "Chatterchats", email = "chats@irby.us" },
    { name = "Kejax", email = "kejax@kejax.net" },
]
description = "An API wrapper for the SpaceTraders API game"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "httpx~=0.27.0",
    "dacite~=1.8.1"
]

[project.urls]
Homepage = "https://github.com/chatterchats/pySpaceTrader"
Issues = "https://github.com/chatterchats/pySpaceTrader/issues"

[tool.pyright]
verboseOutput = true
pythonPlatform = "All"
typeCheckingMode = "standard"
reportCallIssue = false

[tool.black]
line-length = 100
target-version = ['py312']
