[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pySpaceTrader"
description = "An API wrapper for the SpaceTraders API game"
version = "0.5.0"
authors = ["Chatterchats <chats@irby.us>"]
maintainers = ["Kejax <kejax@kejax.net>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/chatterchats/pySpaceTrader"
repository = "https://github.com/chatterchats/pySpaceTrader"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = "~=3.12.4"
httpx = "~=0.27.0"
dacite = "~=1.8.1"

[tool.poetry.dev-dependencies]
black = "~=24.4.2"
pytest = "~=8.2.2"
pyright = "~=1.1.366"
setuptools = ">=61.0"
jupyter = "*"
ipykernel = "*"

[tool.pyright]
verboseOutput = true
pythonPlatform = "All"
typeCheckingMode = "standard"
reportCallIssue = false

[tool.black]
line-length = 100
target-version = ['py312']
