[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pySpaceTraders"
description = "An API wrapper for the SpaceTraders API game"
version = "0.5.0"
authors = ["Chatterchats <chats@irby.us>"]
maintainers = ["Kejax <kejax@kejax.net>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/chatterchats/pySpaceTrader"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = "~=3.12.4"
httpx = "~=0.27.0"
dacite = "~=1.8.1"

[tool.poetry.dev-dependencies]
black = "~=24.4.2"
pytest = "~=8.2.2"
pyright = "~=1.1.366"
setuptools = ">=61.0"

[tool.poetry_bumpversion.file."pySpaceTraders/constants.py"]

[tool.pyright]
verboseOutput = true
pythonPlatform = "All"
typeCheckingMode = "standard"
reportCallIssue = false

[tool.black]
line-length = 100
target-version = ['py312']

